Реализация программы по управлению задачами